Sat Feb 28 10:44:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Clean up configure script.  Check $cross_compiling
		instead of (no longer correct) cache variable; remove
		obsolete AC_C_CROSS.  Use AC_CHECK_FUNCS instead of
		individual AC_FUNC_CHECK calls for speed.  Change checks
		for strsave and utimes to use AC_CHECK_FUNCS

	* krcp.c, v4rcp.c: Change usages of HAS_STRSAVE and HAS_UTIMES to
	 	HAVE_*.

Tue Feb 24 14:52:33 1998  Tom Yu  <tlyu@mit.edu>

	* kcmd.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]
	
	* krcp.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

	* krlogin.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

	* krlogind.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

	* krsh.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

	* krshd.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

Sun Feb 22 19:16:12 1998  Tom Yu  <tlyu@mit.edu>

	* v4rcp.c: Punt nastiness to redefine setreuid, as we don't use
	it.

	* krcp.c: Use krb5_seteuid(). [krb5-libs/505]  Fix up inclusions
	to use <> rather than "".

Wed Feb 18 15:26:52 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Jan 20 21:42:06 1998  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (protocol): Declare pibuf and fibuf as being BUFSIZ
	bytes long, rather than 1024.  Fixes an Irix bug. [krb5-appl/527]

Fri Dec 19 18:19:42 1997  Dan Winship  <danw@mit.edu>

	* login.c (try_afscall): try_afscall doesn't work / isn't needed
	on systems without SIGSYS

Thu Dec 11 23:20:20 1997  Tom Yu  <tlyu@mit.edu>

	* krlogind.c:
	* krshd.c:
	* login.c: