@@ -1,3 +1,10 @@
+1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* login.c (main): 
+	* krshd.c (main): 
+	* krlogind.c (main): POSIX states that getopt returns -1 when it
+		is done parsing options, not EOF.
+
 Sat Feb 28 10:44:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* configure.in: Clean up configure script.  Check $cross_compiling
